  * Small typo fix in RAID5_versus_RAID10.txt
  * Bump Standards-Version to 3.9.1; no changes required.

  [ Michael Tokarev ]
  * don't print W: auto-read-only in checkarray in quiet mode,
    thanks to Bernd Hanisch for the patch (Closes: #605722)
  * move initscript metadata from /lib/init/rw/.mdadm to /run/mdadm,
    and depend on initscripts (>= 2.88dsf-13.3) for /run (Closes: #633054)
  * document defaults change in debian/NEWS (it was forgotten to be
    done for squeeze) - metadata & chunk size (Closes: #595516)

 -- martin f. krafft <madduck@debian.org>  Fri, 29 Jul 2011 15:47:31 +0200

mdadm (3.1.4-1+8efb9d1) unstable; urgency=low

  * Added patch with Makefile fix from upstream (commit 8efb9d1) to fix
    compiler/linker problem on non-x86 architectures (closes: #595290).

 -- martin f. krafft <madduck@debian.org>  Fri, 03 Sep 2010 10:45:01 +0200

mdadm (3.1.4-1) unstable; urgency=low

  * New upstream release, which closes:#595039 and addresses the following
    issues too:
    - reverts move of incremental map (closes: #585015).
    - fixes mdadm monitor in the case of an inactive (or start-failed) raid0
      or linear array (closes: #539154).
    - prevent --remove faulty from skipping renumbered devices
      (closes: #587550).
    - fixed overflow when growing a RAID6 (closes: #589493).
  * However, disable the incremental assembly upstream turned on in 3.1.3 for
    now, this will have to wait until after the squeeze release.
  * initramfs/hook: make sure configuration file exists before accessing it;
    thanks to Michael Prokop for the fix and NMU (closes: #589836).
  * initramfs/hook: Match UUID case-insensitive while checking for running
    arrays not listed in mdadm.conf; thanks to Mario 'BitKoenig' Holbe for the
    patch (closes: #583545).
  * Fix URL in the bug reporting preamble (presubj) (closes: #589833).
  * Add I/O rescheduling functionality to the checkarray script and make the